[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
js-sys = "0.3.64"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "WheelEvent",
    "PointerEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "Location",
    "Navigator",
    "HtmlTextAreaElement",
    "CssStyleDeclaration",
    "HtmlElement",
] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.104"
serde = "1.0.181"
strum_macros = "0.25.1"
rooting = { version = "0.1.5", path = "../../rooting" }
lunk = { version = "0.1.2", path = "../../linkos" }
gloo = { version = "0.10.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.37"
urlencoding = "2.1.3"
console_error_panic_hook = "0.1.7"
defer = "0.1.0"

[profile.release]
debug = true
