[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
js-sys = "0.3.64"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "WheelEvent",
    "PointerEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "Location",
    "Navigator",
    "HtmlTextAreaElement",
    "CssStyleDeclaration",
    "HtmlElement",
    "KeyboardEvent",
    "History",
    "ServiceWorker",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "BroadcastChannel",
    "MessageEvent",
    "PushEvent",
    "PushMessageData",
    "NotificationOptions",
] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.104"
serde = { version = "1.0.181", features = ["derive"] }
strum_macros = "0.25.1"
lunk = { version = "0.1.2", path = "../../linkos" }
gloo = { version = "0.10.0", features = ["futures", "utils"] }
wasm-bindgen-futures = "0.4.37"
urlencoding = "2.1.3"
console_error_panic_hook = "0.1.7"
defer = "0.1.0"
rooting = "0.1.6"
rooting-forms = "0.0.1"
caches = "0.2.7"
futures = "0.3.29"
indexed_db_futures = "0.4.1"

[profile.release]
debug = true

[patch.crates-io]
rooting = { path = "../../rooting" }
rooting-forms = { path = "../../rooting-form" }
