[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = { version = "0.0.4", features = ["serde_json"] }
chrono = "0.4.26"
loga = "0.1.5"
poem = { version = "1.3.56", features = ["rustls", "static-files"] }
taskmanager = "0.1.2"
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.173", features = ["derive"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
serde_json = "1.0.105"
rand = "0.8.5"
